testdata/baselines/reference/submodule/conformance/jsdocConstructorFunctionTypeReference.errors.txt
jsdocConstructorFunctionTypeReference.js(10,36): error TS7006: Parameter 'state' implicitly has an 'any' type.


==== jsdocConstructorFunctionTypeReference.js (1 errors) ====
    var Validator = function VFunc() {
        this.flags = "gim"
    };
    
    Validator.prototype.num = 12
    
    /**
     * @param {Validator} state
     */
    var validateRegExpFlags = function(state) {
                                       ~~~~~
!!! error TS7006: Parameter 'state' implicitly has an 'any' type.
        return state.flags
    };
    
    